# purelms-interactive-tasks

./: .allowed_signers  .gitignore  .pre-commit-config.yaml  BACKEND_AUTHORING_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  backends.toml  justfile  pyproject.toml
.github/workflows/: release.yml
_shared_backends/: README.md
_shared_backends/purelms_itask_runtime/: README.md  pyproject.toml
_shared_backends/purelms_itask_runtime/src/purelms_itask_runtime/: __init__.py  entrypoint.py  runtime.py  service.py
_shared_backends/purelms_itask_runtime/tests/: test_runtime.py  test_service.py
_shared_frontend/: run_lifecycle.ts
_template/: README.md  interactive_task.yaml
_template/backend/: Dockerfile  __metadata__.py  main.py  pyproject.toml
_template/backend/tests/: test_main.py
_template/frontend/: package.json
_template/frontend/src/: placeholder.ts
_template/frontend/tests/: placeholder.test.ts
echo/: interactive_task.yaml
echo/backend/: Dockerfile  __metadata__.py  main.py  pyproject.toml
echo/backend/tests/: test_main.py
echo/frontend/: package-lock.json  package.json  tsconfig.json
echo/frontend/src/: echo.ts
echo/frontend/tests/: echo.test.ts
energyplus_single_zone/: interactive_task.yaml
energyplus_single_zone/backend/: .dockerignore  Dockerfile  README.md  __metadata__.py  climate.py  main.py  pyproject.toml  runner.py
energyplus_single_zone/backend/idf/: single_zone.idf.template
energyplus_single_zone/backend/tests/: test_main.py  test_runner.py
energyplus_single_zone/frontend/: package-lock.json  package.json
energyplus_single_zone/frontend/src/: constants.ts  energyplus_single_zone.ts  scene.ts  types.ts
energyplus_single_zone/frontend/tests/: energyplus_single_zone.test.ts
modelica_diagram/: interactive_task.yaml
modelica_diagram/backend/: .dockerignore  Dockerfile  __metadata__.py  fmpy_runner.py  grading.py  main.py  pyproject.toml  topology.py
modelica_diagram/backend/scenarios/hydronic_loop/: README.md  model.fmu  scenario.json
modelica_diagram/backend/scenarios/hydronic_loop/model/: HydronicLoop.mo  HydronicLoop_FMU.makefile  HydronicLoop_info.json  build.mos  diag.mos  index.html  setup.mos  validate.py
modelica_diagram/backend/tests/: test_grading.py  test_main.py  test_topology.py
modelica_diagram/frontend/: package-lock.json  package.json  tsconfig.json
modelica_diagram/frontend/src/: canvas.ts  diagram.ts  drawflow.d.ts  modelica_diagram.ts  styles.ts  types.ts
modelica_diagram/frontend/tests/: canvas_restore.test.ts  diagram.test.ts  modelica_diagram.test.ts  scenario_sync.test.ts
scripts/: __init__.py  backend_inventory.py  smoke_backend.py  validate_release_assets.py  validate_release_versions.py
tests/: test_deployment_contract.py
