[project]
name = "purelms-interactive-tasks"
version = "0.2.0"
description = "Container + frontend pairs that PureLMS launches as InteractiveTasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Daniel McQuillen", email = "daniel@mcquilleninteractive.com" },
]

# This is a workspace root. Each InteractiveTask lives at <slug>/ with
# paired backend/ (container) and frontend/ (ES module bundle)
# subdirectories. The container's Python sources are uv workspace
# members; each declares its own pyproject.toml at <slug>/backend/.
# The container itself is distributed as a Docker image (per slug,
# per semver version) — it's NOT a published Python package.
#
# The workspace exists to:
#   - share dev-deps (pytest, ruff, etc.) across all InteractiveTasks
#   - run lint + test from the repo root via uv
#   - lock dependencies coherently across backends

dependencies = [
    # Pydantic envelope schemas — every backend reads + writes these.
    # Floor pinned to the version that introduced unit_block_id on
    # SimulationInputEnvelope (Slice 3d sweep). Older
    # versions reject the field due to ``extra="forbid"``.
    "purelms-shared>=0.5.0",
]

# purelms-shared is now a published PyPI package — the ``>=0.5.0``
# floor pin in ``dependencies`` (and in each backend member) is the
# source of truth. The editable sibling-path override that lived here
# is gone (audit P0-2 closed; matches validibot-shared's model).

[tool.uv.workspace]
# Each InteractiveTask's backend/ is its own workspace member with
# its own pyproject.toml at <slug>/backend/. New InteractiveTasks get
# added here.
members = [
    "echo/backend",
    "energyplus_single_zone/backend",
    "modelica_diagram/backend",
    # Shared backend runtime helper (local-dir vs GCS envelope I/O +
    # progress/complete worker callbacks). Vendored into each backend
    # image's _vendor/ wheel like purelms-shared; see the justfile.
    "_shared_backends/purelms_itask_runtime",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.15,<1",
    "pre-commit>=4.0,<5",
]


# ==== pytest ====
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
# Workspace-root pytest scope is intentionally narrow — just the
# canonical reference InteractiveTask (echo). Why not multiple
# backends here: each backend's ``tests/`` directory uses the same
# file names (``test_main.py``, ``test_runner.py``) and pytest's
# top-level collection doesn't scope module names per-directory
# without conftest.py setup. The right "run everything" entrypoint
# is ``just test-all``, which cd's into each backend separately so
# each backend's own ``pyproject.toml`` (with ``testpaths=["tests"]``)
# is the config root.
testpaths = [
    "echo/backend/tests",
]
python_files = ["test_*.py"]


# ==== ruff ====
# Same lean ruleset as purelms-shared (no Django selectors needed).
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "EM", "PIE",
    "PT", "RET", "SIM", "TID", "TC", "PTH", "PL", "TRY", "RUF",
]
ignore = [
    "PLR0913",  # too many args — domain runners legitimately need many
    "E501",     # line length handled by ruff format
    "TRY003",   # long exception messages
    "EM101",
    "EM102",
    "COM812",
    # Pydantic v2 runtime-type imports (same as purelms-shared).
    "TC001",
    "TC003",
    "RUF002",
    # × (multiplication sign) is correct scientific notation in
    # building-energy docstrings (U × A × ΔT, etc.). Same rationale
    # as RUF002 for em-dash — the audience is humans reading
    # comments, not parsers.
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = true
