[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purelms-itask-runtime"
version = "0.1.1"
description = "Shared runtime helper for PureLMS InteractiveTask backend containers: local or signed-object envelope I/O plus authenticated callbacks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel McQuillen", email = "daniel@mcquilleninteractive.com" },
]
dependencies = [
    # Envelope + callback schemas. Same floor pin as every backend.
    "purelms-shared>=0.5.0",
]

[project.optional-dependencies]
# Only the async / Cloud Run Jobs deployment needs this — OIDC tokens for
# worker callbacks. Signed object I/O uses the standard library. The local
# (sync) path reads/writes local dirs and posts no callbacks, so it runs
# without them. The deployed image installs ``purelms-itask-runtime[cloud]``.
cloud = [
    "google-auth[requests]>=2.20",
]
dev = [
    "pytest>=8.0,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
