[project]
name = "purelms-itask-echo"
version = "0.1.0"
description = "Stub echo InteractiveTask backend — permanent integration-test fixture for the PureLMS execution path (per ADR-0014)"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel McQuillen", email = "daniel@mcquilleninteractive.com" },
]
dependencies = [
    "purelms-shared>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
]

[tool.uv.sources]
purelms-shared = { path = "../../../purelms-shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
