[project]
name = "purelms-itask-echo"
version = "0.1.0"
description = "Stub echo InteractiveTask backend — permanent integration-test fixture for the PureLMS execution path (per ADR-0014)"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel McQuillen", email = "daniel@mcquilleninteractive.com" },
]
dependencies = [
    "purelms-shared>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
]

# purelms-shared is a published PyPI package (>=0.4.0 above) — no
# source override needed (audit P0-2 closed).

[tool.pytest.ini_options]
testpaths = ["tests"]
