[project]
name = "purelms-itask-energyplus-single-zone"
version = "0.1.0"
description = "EnergyPlus single-zone InteractiveTask backend — stubbed analytical thermal model (Slice 3d Phase C.1; real EnergyPlus deferred to Slice 4)"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daniel McQuillen", email = "daniel@mcquilleninteractive.com" },
]
dependencies = [
    # v1's stubbed thermal model is pure Python — no scientific
    # dependencies. When real EnergyPlus lands (Slice 4+), this
    # will pick up ``eppy`` or ``opyplus`` for IDF/EPW handling
    # plus a vendored EnergyPlus binary in the Dockerfile.
    "purelms-shared>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
]

# purelms-shared is published to PyPI; the ``>=0.4.0`` floor-pin in
# ``dependencies`` above is the source of truth (audit P0-2 closed —
# the editable sibling-path override is gone).

[tool.pytest.ini_options]
testpaths = ["tests"]
